tmp_ch16_governance_error.txt
  File "/home/runner/work/Guide-IA-GameDev/Guide-IA-GameDev/tools/qa/tmp_update_ch16_governance.py", line 2
    exec(compile(zlib.decompress(base64.b64decode("".join([
        ^
SyntaxError: '(' was never closed
